# pcl_exercise

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/: Makefile  cmake_install.cmake
src/: .normal_estimation_using_integral_images.cpp.swo  .normal_estimation_using_integral_images.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example_fast_point_feature_histograms.cpp  example_normal_estimation.cpp  example_point_feature_histograms.cpp  normal_estimation_using_integral_images.cpp  pc_test.cpp
