add_executable(pc_test pc_test.cpp)
target_link_libraries(pc_test ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
add_executable(normal_estimation_using_integral_images  normal_estimation_using_integral_images.cpp)
target_link_libraries(normal_estimation_using_integral_images ${PCL_LIBRARIES})
add_executable(example_point_feature_histograms example_point_feature_histograms.cpp)
target_link_libraries(example_point_feature_histograms ${PCL_LIBRARIES})
add_executable(example_fast_point_feature_histograms example_fast_point_feature_histograms.cpp)
target_link_libraries(example_fast_point_feature_histograms ${PCL_LIBRARIES})
add_executable(example_normal_estimation example_normal_estimation.cpp)
target_link_libraries(example_normal_estimation ${PCL_LIBRARIES})
